[package]
edition      = "2024"
name         = "patina"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "patina"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { workspace = true }
esp-rtos = { workspace = true }
defmt = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
embassy-net = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
embedded-graphics = { workspace = true }
esp-alloc = { workspace = true }
panic-rtt-target = { workspace = true }
rtt-target = { workspace = true }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
esp-radio = { workspace = true }
smoltcp = { workspace = true }
trouble-host = { workspace = true }
critical-section = { workspace = true }
static_cell      = { workspace = true }
heapless = { workspace = true }
embedded-bus-async = { path = "../embedded-bus-async" }
t-deck-pro-touch-async = { path = "../t-deck-pro-touch-async" }
t-deck-pro-epd-async = { path = "../t-deck-pro-epd-async" }
t-deck-pro-keyboard-async = { path = "../t-deck-pro-keyboard-async" }
t-deck-pro-battery-async = { path = "../t-deck-pro-battery-async" }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "defmt",
  "embassy",
  "external-executor",
  "xtensa-semihosting",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
